--- a/index.html
+++ b/index.html
@@ -291,6 +291,30 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   /* Optional: tighten spacing now that sub-headers are gone */
   #pdfReport .info-grid .card { padding-top: 8px; }
 }
+
+/* PDF: add horizontal blue lines inside the Personal/Peer info cards */
+@media print {
+  /* Apply thin light-blue separators to each row-like child within the info cards */
+  #pdfReport .info-grid .card > * {
+    border-bottom: 0.5px solid #87CEFA !important;
+  }
+  #pdfReport .info-grid .card > *:last-child {
+    border-bottom: none !important;
+  }
+  /* In case rows are wrapped in <p> or <div> inside a wrapper, cover common row classes */
+  #pdfReport .info-grid .card .row,
+  #pdfReport .info-grid .card .kv,
+  #pdfReport .info-grid .card .kv-row,
+  #pdfReport .info-grid .card p {
+    border-bottom: 0.5px solid #87CEFA !important;
+  }
+  #pdfReport .info-grid .card .row:last-child,
+  #pdfReport .info-grid .card .kv:last-child,
+  #pdfReport .info-grid .card .kv-row:last-child,
+  #pdfReport .info-grid .card p:last-child {
+    border-bottom: none !important;
+  }
+}
 </style>
 <script id="embeddedQuestions" type="application/json">[]</script>
 </head>
