--- a/index.html
+++ b/index.html
@@ -502,6 +502,10 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
     display: none !important;
   }
 }
+</style><style>
+/* === FINAL fixes v69: Information section row alignment + unbold labels (screen + print) === */
+#pdfReport .info-grid .fields { align-items: center !important; }
+#pdfReport .info-grid .fields label { font-weight: 400 !important; }
 </style></head>
 <body>
 <main class="container">
